# hemelb

./: .clang-format-ignore  .gitignore  .hgignore  .hgsub  .hgsubstate  .hgtags  .mailmap  .readthedocs.yaml  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README.md  README.txt  Vagrantfile  fabfile.py  jobbuilder.yml  template.yml
Code/: .cproject  .cvsignore  .project  CMakeLists.txt  D3Q15.cc  D3Q15.h  Doxyfile  Exception.h  Makefile  README  Rules.mk  SimConfig.cc  SimConfig.h  SimulationController.cc  SimulationController.h  SimulationMaster.cc  SimulationMaster.h  SimulationMaster.impl.h  Traits.h  Traits.in.h  asciiFileWriter.cc  asciiStreamWriter.cc  asciiStreamWriter.h  benchmark.cc  benchmark.h  build_LONI  build_Lonestar  build_SDSC_NCSA_IA64_mpig  build_XT3_bigben  build_info.h.in  build_mpig_steering_LONI  colourpalette.cc  colourpalette.h  colpixel.cc  colpixel.h  confcheck.cc  config.cc  config.h  configconstants.h  constants.h  (+61 more)
Code/client/: Makefile  displayClient.cc
Code/cmake/: build_environment.cmake  codesign.cmake  cxx11.cmake  dependencies.cmake  gnu_bug.cmake  intel_cpp11.cmake  mountain_lion_scandir.cmake  mpi.cmake  options.cmake  platform_checks.cmake
Code/colloids/: BodyForceExamples.h  BodyForces.cc  BodyForces.h  BoundaryConditions.cc  BoundaryConditions.h  CMakeLists.txt  ColloidController.cc  ColloidController.h  DeletionBC.h  GraviticBodyForce.h  LubricationBC.h  Particle.cc  Particle.h  ParticleMpiDatatypes.cc  ParticleSet.cc  ParticleSet.h  PersistedParticle.cc  PersistedParticle.h  README.md
Code/comm/: Async.h  AsyncConcern.h  CMakeLists.txt  Communicator.h  Communicator.hpp  Group.h  MapAllToAll.h  MpiCommunicator.cc  MpiCommunicator.h  MpiDataType.cc  MpiDataType.h  MpiEnvironment.cc  MpiEnvironment.h  MpiError.cc  MpiError.h  MpiFile.cc  MpiFile.h  MpiFile.hpp  MpiGroup.cc  MpiGroup.h  MpiRequest.cc  MpiRequest.h  MpiStatus.cc  MpiStatus.h  Request.h
Code/configuration/: CMakeLists.txt  CommandLine.cc  CommandLine.h  MonitoringConfig.h  PathManager.cc  PathManager.h  Rules.mk  SimBuilder.cc  SimBuilder.h  SimConfig.cc  SimConfig.h  SimConfigReader.cc  SimConfigReader.h  SimConfigWriter.cc  SimConfigWriter.h
Code/dbg/: Debugger.cc  Debugger.h  Rules.mk  debug.h  platform.h
Code/debug/: CMakeLists.txt  Debugger.cc  Debugger.h  PlatformDebugger.h.in  Rules.mk  platform.h
Code/extraction/: ArbitrarySiteListIterableDataSource.cc  ArbitrarySiteListIterableDataSource.h  CMakeLists.txt  GeometrySelector.cc  GeometrySelector.h  GeometrySelectors.h  GeometryStentSurfaceSelector.cc  GeometryStentSurfaceSelector.h  GeometrySurfaceSelector.cc  GeometrySurfaceSelector.h  GeometryVesselSurfaceSelector.cc  GeometryVesselSurfaceSelector.h  InputField.h  IoletGeometrySelector.cc  IoletGeometrySelector.h  IterableDataSource.cc  IterableDataSource.h  LbDataSource.h  LbDataSourceIterator.cc  LbDataSourceIterator.h  LineGeometrySelector.cc  LineGeometrySelector.h  LocalDistributionInput.cc  LocalDistributionInput.h  LocalPropertyInput.cc  LocalPropertyInput.h  LocalPropertyOutput.cc  LocalPropertyOutput.h  OutputField.h  PlaneGeometrySelector.cc  PlaneGeometrySelector.h  PropertyActor.cc  PropertyActor.h  PropertyOutput.h  PropertyOutputFile.h  PropertyWriter.cc  PropertyWriter.h  SnapshotParser.cc  SnapshotParser.h  StraightLineGeometrySelector.cc  (+5 more)
Code/functionaltests/: main.cc
Code/geometry/: Block.cc  Block.h  BlockTraverser.cc  BlockTraverser.h  BlockTraverserWithVisitedBlockTracker.cc  BlockTraverserWithVisitedBlockTracker.h  CMakeLists.txt  Decomposition.cc  Decomposition.h  Decomposition.hpp  Domain.cc  Domain.h  FieldData.cc  FieldData.h  Geometry.cc  Geometry.h  GeometryBlock.h  GeometryPeeker.cc  GeometryPeeker.h  GeometryReader.cc  GeometryReader.h  GeometryReaderBase.cc  GeometryReaderBase.h  GeometrySite.h  GeometrySiteLink.h  GlobalLatticeData.cc  GlobalLatticeData.h  GmyReadResult.cc  GmyReadResult.h  LatticeData.cc  LatticeData.cu  LatticeData.h  LocalLatticeData.cc  LocalLatticeData.h  LookupTree.cc  LookupTree.h  NeighbouringProcessor.h  ParmetisForward.h.in  ParmetisHeader.h  ReadResult.h  (+13 more)
Code/io/: AsciiFileWriter.cc  AsciiFileWriter.h  AsciiStreamWriter.cc  AsciiStreamWriter.h  CMakeLists.txt  Checkpointer.cc  Checkpointer.h  FILE.cc  FILE.h  PathManager.cc  PathManager.h  Rules.mk  TimePattern.cc  TimePattern.h  Writer.cc  Writer.h  XdrFileReader.cc  XdrFileReader.h  XdrFileWriter.cc  XdrFileWriter.h  XdrMemReader.cc  XdrMemReader.h  XdrMemWriter.cc  XdrMemWriter.h  XdrReader.cc  XdrReader.h  XdrSerialisation.h  XdrWriter.cc  XdrWriter.h  asciiFileWriter.cc  asciiFileWriter.h  asciiStreamWriter.cc  asciiStreamWriter.h  ensure_hexfloat.h  hexfloat.cc  hexfloat.h  writer.cc  writer.h  xdrFileWriter.cc  xdrFileWriter.h  (+8 more)
Code/lb/: ADELB.h  ADELB.hpp  BoundaryComms.cc  BoundaryComms.h  BoundaryValues.cc  BoundaryValues.h  BuildSystemInterface.h  CMakeLists.txt  Collisions.h  EntropyTester.cc  EntropyTester.h  GlobalLatticeData.h  HFunction.cc  HFunction.h  HydroVars.h  IncompressibilityChecker.cc  IncompressibilityChecker.h  IncompressibilityChecker.hpp  InitialCondition.cc  InitialCondition.h  InitialCondition.hpp  Kernels.h  Lattices.h  LbmParameters.h  LocalLatticeData.cc  LocalLatticeData.h  MacroscopicPropertyCache.cc  MacroscopicPropertyCache.h  README.md  Rules.mk  Rules.mk.orig  SimulationState.cc  SimulationState.h  StabilityTester.cc  StabilityTester.h  StabilityTester.hpp  Streamers.h  concepts.h  cuda_helper.h  io.cc  (+3 more)
Code/lbm_collisions/: Collisions.cc  Collisions.h  Rules.mk
Code/log/: CMakeLists.txt  Logger.cc  Logger.h  Logger.in.cc  LoggerCommon.cc  LoggerDebug.cc  LoggerInfo.cc  LoggerWarning.cc  Rules.mk
Code/logging/: CMakeLists.txt  Logger.cc  Logger.h
Code/make/: Makefile.CCS  Makefile.CCS.perkin  Makefile.CCSNOSTEER  Makefile.IntrepidBGP  Makefile.Legion  (+35 more)
dependencies/: CMakeLists.txt  README.md
geometry-tool/: .vagrant-provision-ubuntu-20.04.sh  CMakeLists.txt  README.md  bodge-packages-for-setuptools.sh  conda-environment.yml  debug.sh  macos-fix-gui-launcher.py  pyproject.toml  setup.py
(+3512 files in other folders)
